tdf#133716: Fix edge gradient when upscaling image

When an image is getting upscaled with cario as engine it got blured borders.
The issue that was worked on showed, in the PresenterConsole, that the
borders of the previews and control area had an unnecessary gradient in it.
As these borders are build from images which are getting upscaled,
either in width or height a graident ocurred. This was because the cairo
rending didn't had the correct pattern extention set: CAIRO_EXTEND_PAD.

Nearly same issue also occured when adding an image to a presentation
and upscaling it, the borders got blured. For images with either height or
width equal to one this was a while back fixed: tdf#114117, but not for the
general case. Using another extend mode fixes this, because the PAD
extend mode doesn't blur the borders.

CAIRO_EXTEND_PAD:
pixels outside of the pattern copy the closest pixel from the source

Change-Id: I39f8a14a69f035a43a93afb303f0a2e7ec8699c7